<resources>
    <string name="app_name" translatable="false">Tonkeeper X</string>
    <string name="ton" translatable="false">TON</string>
    <string name="toncoin" translatable="false">Toncoin</string>
    <string name="bitcoin" translatable="false">Bitcoin</string>

    <string name="settings">Settings</string>
    <string name="wallet">Wallet</string>
    <string name="activity">Activity</string>
    <string name="history">History</string>
    <string name="price">Price</string>
    <string name="scan">Scan</string>
    <string name="stake">Stake</string>
    <string name="wallet_initialized">Wallet Initialized</string>
    <string name="bid">Bid</string>
    <string name="unstake_request">Unstake Request</string>
...
    <string name="nft_purchase">NFT Purchase</string>
    <string name="burned">Burned</string>
    <string name="unsubscribed">Unsubscribed</string>
    <string name="subscribed">Subscribed</string>
    <string name="received">Received</string>

    <string name="continue_action">Continue</string>
    <string name="get_started">Get started</string>
    <string name="updating">Updating</string>
    <string name="details">Details</string>
    <string name="view_in_explorer">View in explorer</string>
    <string name="owner">Owner</string>
    <string name="scan_qr_code">Scan QR code</string>
...
    <string name="jetton_transfer">%1$s transfer</string>
    <string name="name_your_wallet">Name your wallet</string>
    <string name="name_your_wallet_subtitle">Name your wallet to easily identify it while using the Tonkeeper. These names are stored locally, and can only be seen by you.</string>

    <string name="tokens">Tokens</string>
    <string name="today">Today</string>
    <string name="address">Address</string>
    <string name="yesterday">Yesterday</string>
    <string name="collectibles">Collectibles</string>
    <string name="call_contract">Call contract</string>
    <string name="contract_address">Contract address</string>
    <string name="about_collection">About collection</string>
    <string name="save">Save</string>
    <string name="share">Share</string>
    <string name="copied">Copied</string>
    <string name="view_on_nft_market">View on NFT Market</string>
    <string name="open_market">Open market</string>

    <string name="widget">Widget</string>
    <string name="empty_history_title">Your activity will be shown here</string>
    <string name="empty_history_subtitle">Make your first transaction!</string>

    <string name="empty_collectibles_title">Your collectibles will be shown here</string>
    <string name="empty_collectibles_subtitle">Get your first item!</string>

    <string name="buy_toncoin">Buy Toncoin</string>
    <string name="buy_or_sell">Buy or sell</string>
    <string name="fiat_open_description">You are opening an external app not operated by Tonkeeper.</string>
    <string name="buy">Buy</string>
    <string name="search">Search</string>
    <string name="country_title">Choose your country</string>
    <string name="intro_description">Create a new wallet or add an existing one</string>
...

    <string name="intro_line_3_title">Built-in subscriptions</string>
    <string name="intro_line_3_description">TON subscriptions are peer-to-peer and borderless so that no one can restrict providers or customers. Near-zero fees and full control for you.</string>

    <string name="start_title">Tonkeeper</string>
    <string name="start_description">Create a new wallet or add an existing one</string>
    <string name="start_create_new_wallet">Create new wallet</string>
    <string name="start_import_wallet">Import existing wallet</string>
    <string name="passcode_enter">Enter passcode</string>
    <string name="passcode_create">Create passcode</string>
    <string name="passcode_re_enter">Re-enter passcode</string>
    <string name="cancel">Cancel</string>
    <string name="fee">Fee</string>
    <string name="period_24h">24h</string>
    <string name="enable_notification">Enable notification</string>
    <string name="enable_notification_title">Get instant notifications</string>
    <string name="enable_notification_subtitle">Get notified when you receive TON, tokens and NFTs</string>
    <string name="widget_placeholder">Need to select a wallet</string>

    <string name="import_wallet_title">Enter your recovery phrase</string>
    <string name="import_wallet_description">To restore access to your wallet, enter the 24 secret recovery words given to you when you created your wallet.</string>

...

    <string name="phrase_check_title">So, let’s check</string>
    <string name="phrase_check_description">To check whether you’ve written down your recovery phrase correctly, please enter the %1$dth, %2$dth, and %3$dst words.</string>

    <string name="security">Security</string>

    <string name="send">Send</string>
    <string name="swap">Swap</string>
    <string name="manage">Manage</string>
    <string name="manage_wallets">Manage wallets</string>
    <string name="receive">Receive</string>
    <string name="log_out">Log out</string>
    <string name="amount">Amount</string>

    <string name="recipient">Recipient</string>
    <string name="recipient_address">Recipient address</string>

    <string name="sender">Sender</string>
    <string name="sender_address">Sender address</string>

    <string name="transaction">Transaction</string>

    <string name="address_hint">Address or name</string>
    <string name="comment">Comment</string>
    <string name="paste">Paste</string>
    <string name="version">Version %1$s (%2$d)</string>
    <string name="currency">Currency</string>
    <string name="rename">Rename</string>
    <string name="wallet_name">Wallet name</string>
    <string name="primary_currency">Primary currency</string>
    <string name="currency_usd_name">United States Dollar</string>
...

    <string name="done">Done</string>
    <string name="error">Error</string>

    <string name="receive_coin">Receive %1$s</string>
    <string name="receive_coin_description">Send only %1$s and tokens in TON network to this address, or you might lose your funds.</string>
    <string name="copy">Copy</string>
    <string name="legal">Legal</string>
    <string name="terms">Terms of use</string>
    <string name="privacy">Privacy policy</string>
    <string name="do_not_show_again">Do not show again</string>
    <string name="licenses">Licenses</string>
    <string name="montserrat_font">Montserrat font</string>
...
    <string name="back_up_now">Back up now</string>
    <string name="max">Max</string>
    <string name="confirm_and_send">Confirm and send</string>
    <string name="confirm_action">Confirm action</string>
    <string name="ton_connect_title">Connect to %1$s?</string>
    <string name="ton_connect_description">%1$s is requesting access to your wallet address %2$s %3$s</string>
    <string name="connect_wallet">Connect wallet</string>
    <string name="ton_connect_subtitle">Be sure to check the service address before connecting the wallet.</string>
    <string name="available_balance">Available: %1$s</string>
    <string name="insufficient_balance">Insufficient balance</string>
    <string name="to_address">To: %1$s</string>
    <string name="remaining_balance">Remaining: %1$s</string>
    <string name="wallet_balance">Wallet balance</string>
...
