<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android">
    
    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/icon"
        android:layout_width="44dp"
        android:layout_height="44dp"
        android:scaleType="centerInside"
        android:background="@drawable/bg_action_icon"
        android:layout_gravity="center"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/title"
        android:layout_marginTop="8dp"
        android:textAppearance="@style/TextAppearance.Tonkeeper.Label"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</merge>