...
                                ) {
                                    MoonActionIcon(
                                        painter = painterResource(id = UIKitIcon.ic_qr_code_16),
                                        onClick = { isQrShown = true },
                                        size = 28.dp,
                                        tintColor = UIKit.colorScheme.icon.secondary,
                                        contentDescription = "Navigation"
                                    )

                                    MoonActionIcon(
                                        painter = painterResource(id = UIKitIcon.ic_copy_16),
                                        onClick = { clipboard.copy(payinAddressAnnotated.toString()) },
                                        size = 28.dp,
...
