appId: com.ton_keeper.debug
---
- tapOn: Import existing wallet
- tapOn:
    text: Import wallet
    index: 1

- runFlow:
    when:
      true: ${fast_login == "true"}
    file: "mnemonic/24key_words_fast.yaml"
    env:
      mnemonica: ${WALLET_WITH_MONEY}

- runFlow:
    when:
      true: ${fast_login != "true"}
    file: "mnemonic/24key_words.yaml"
    env:
      mnemonica: ${WALLET_WITH_MONEY}

- assertVisible: Create passcode
- repeat:
    times: 4
    commands:
      - tapOn: ${PASSWORD_KEY}

- assertVisible: Re-enter passcode
- repeat:
    times: 4
    commands:
      - tapOn: ${PASSWORD_KEY}

- tapOn: Later
- tapOn: "Continue"

- tapOn:
    id: stories_close
    optional: true
